modified preorder now

--- a/PreOrder Now.html
+++ b/PreOrder Now.html
@@ -8,8 +8,10 @@
 </head>
 <body>
    <h1>Thanks For Choosing Our Products!!!</h1>
+   <div class="content">
+   <div class="wrapper1">
    <div class="Side bar">
-   	<img src="C:\Users\IKEAGWU STANLEY\Documents\udemy\IMG-20250507-WA0032.jpg"width="300px" height="500px">
+   	<img src="IMG-20250507-WA0032.jpg"width="300px" height="500px">
    </div>
    <div>
    	 <h2>
@@ -24,9 +26,10 @@
    </form>
        <a href="Order"class="cta-button">Order for $499.99</a><br>
    </div>
-
+ </div>
+    <div class="wrapper2">
    <div class="Side bar">
-   	 <img src="C:\Users\IKEAGWU STANLEY\Documents\udemy\IMG-20250507-WA0041.jpg"width="300px" height="500px">
+   	 <img src="IMG-20250507-WA0041.jpg"width="300px" height="500px">
    </div>
    <div>
    	<h3>
@@ -41,6 +44,8 @@
    </form>
        <a href="Order"class="cta-button">Order for $599.99</a><br>
    </div>
+</div>
+</div>
    <div class="images">
    	
    </div>
